@@ -1,3 +1,8 @@
+2007-09-17  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpdockbook.[ch]: when DND-hovering > 500ms over a
+	notebook tab, switch to that tab's page. Suggested by Saul Goode.
+
 2007-09-17  Sven Neumann  <sven@gimp.org>
 
 	* modules/cdisplay_proof.c: use a GimpColorProfileComboBox for
